# ttally

./: P_README.md  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  mypy.yaml
ttally/: __init__.py  __main__.py  accessor.py  autotui_ext.py  cache.py  codegen.py  common.py  config.py  core.py  default_config.py  file.py  funcs.py  json.py  main.py  models.py  recent.py
tupletally/: __init__.py  __main__.py  autotui_ext.py  codegen.py  config.py  file.py  json.py  json_stdin.py  models.py  recent.py
